Added creating Model, Shacl Rules, Sparql Query